DeveloperOrg/force-app/main/default/objects/Discount_Request__c/Discount_Request__c.object-meta.xml
<CustomObject>
    <label>Discount Request</label>
    <nameField>
        <label>Discount Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>