DeveloperOrg/force-app/main/default/objects/Discount_Request__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Status</label>
    <type>Checkbox</type>
</CustomField>