DeveloperOrg/force-app/main/default/objects/Discount_Request__c/fields/Business_Justification__c.field-meta.xml
<CustomField>
    <fullName>Business_Justification__c</fullName>
    <label>Business Justification</label>
    <length>10</length>
    <type>Text</type>
</CustomField>