DeveloperOrg/force-app/main/default/objects/Discount_Request__c/fields/Requested_Discount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Discount__c</fullName>
    <label>Requested Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>