DeveloperOrg/force-app/main/default/objects/Discount_Request__c/validationRules/Discount_less_than_20.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_less_than_20</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Requested_Discount__c   &gt; 20, ISBLANK( Business_Justification__c ))</errorConditionFormula>
    <errorMessage>Discount less than 20  Justification is needed</errorMessage>
</ValidationRule>